# cosyvoice2b-0.5b-onnx-inference

./: README.md  onnx_tts_standalone.py  pyproject.toml
