[project]
name = "onnx-tts-standalone"
version = "0.1.0"
description = "Standalone ONNX TTS Pipeline for CosyVoice2 - No CosyVoice dependency"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec>=0.1.0",
    "openai-whisper>=20231117",
    "transformers>=4.35.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
# GPU support
gpu = [
    "onnxruntime-gpu>=1.16.0",
]
# Development tools
dev = [
    "ipython",
    "jupyter",
    "gradio>=4.0.0",
]

[project.scripts]
onnx-tts = "onnx_tts_standalone:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipython",
    "jupyter",
]
